@@ -3,8 +3,15 @@ Change history
 
 Release Candidate 2
 ===================
+
+- Applied patch by Nick Hemsley fixing MR-157
+  "add fromNameValueCollection method for creating IDictionary instances from (i.e.) Context.Params, or Request.QueryString"
+  
+  Method was renamed to FromNameValueCollection
+
 - Introduced ARPagination.CreatePagination<T>(SimpleQuery<T>). Looks like it can be
   extended later for the non-generic SimpleQuery.
+
 - Made all Helpers that install javascript code use the same signature Helper.InstallScripts(). Should we mandate an interface?
 
 Release Candidate 1
